--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,11 @@ dependencies:
   url_launcher: ^6.0.9
   plugin_platform_interface: ^2.1.3
   firebase_database: ^9.1.7
-
+ 
+  file_picker: ^5.2.2
+  image_picker: ^0.8.6
+  permission_handler: ^9.2.0
+  firebase_storage: ^11.0.2
 
 dev_dependencies:
   flutter_test:
