--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  cloud_firestore: ^3.4.9
-  firebase_auth: ^3.10.0
+  cloud_firestore: ^4.0.2
+  # firebase_auth: ^3.10.0
   google_sign_in: ^5.0.3
   email_validator: ^2.1.17
   provider: ^5.0.0
@@ -52,12 +52,15 @@ dependencies:
   animations: ^2.0.7
   url_launcher: ^6.0.9
   plugin_platform_interface: ^2.1.3
-  firebase_database: ^9.1.7
+  firebase_database: ^10.0.2
  
   file_picker: ^5.2.2
   image_picker: ^0.8.6
   permission_handler: ^9.2.0
+  firebase_auth: ^4.0.2
   firebase_storage: ^11.0.2
+  video_player: ^2.4.7
+  # firebase_storage: ^11.0.2
 
 dev_dependencies:
   flutter_test:
