--- a/.github/workflows/fluttercli.yml
+++ b/.github/workflows/fluttercli.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '2.x'  # Specify the Flutter version you want to use
+        flutter-version: '2.18.0'  # Specify the Flutter version you want to use
 
     - name: Install dependencies
       run: flutter pub get
