--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ version: 1.0.0+1
 
 environment:
   # sdk: '>=2.16.0 <3.0.0'
-  sdk: ">=2.17.0-0 <4.0.0"
+  sdk: '>=2.17.0-0 <4.0.0'
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
