--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,8 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
+    # sdk: flutter
+     sdk: '>=2.17.0-0 <4.0.0'
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
