--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  # sdk: '>=2.16.0 <3.0.0'
-  sdk: '>=2.17.0-0 <4.0.0'
+  sdk: '>=2.16.0 <3.0.0'
+  # sdk: '>=2.17.0-0 <4.0.0'
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
@@ -30,8 +30,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
-    # sdk: flutter
-  sdk: '>=2.17.0-0 <4.0.0'
+    sdk: flutter
+  # sdk: '>=2.17.0-0 <4.0.0'
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -64,8 +64,8 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
-    # sdk: flutter
-     sdk: '>=2.17.0-0 <4.0.0'
+    sdk: flutter
+     # sdk: '>=2.17.0-0 <4.0.0'
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
