--- a/.github/workflows/3lah.yml
+++ b/.github/workflows/3lah.yml
@@ -1,4 +1,4 @@
-name: Flutter CI
+name: Flutter CII
 
 on:
   push:
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '2.x'  # Specify the Flutter version you want to use
+        flutter-version: '2.16.0'  # Specify the Flutter version you want to use
 
     - name: Install dependencies
       run: |
