--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.16.0 <3.0.0'
+  # sdk: '>=2.16.0 <3.0.0'
+   sdk: '>=2.16.2 <3.0.0'
   # sdk: '>=2.17.0-0 <4.0.0'
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -48,7 +49,7 @@ dependencies:
   cached_network_image: ^3.2.2
   carousel_slider: ^4.1.1
   http: ^0.13.5
-  flutter_svg: ^1.1.5
+  flutter_svg: ^1.1.0
   animations: ^2.0.7
   url_launcher: ^6.0.9
   plugin_platform_interface: ^2.1.3
